--- a/src/app/app.html
+++ b/src/app/app.html
@@ -230,8 +230,10 @@
           <clipPath id="a"><path fill="#fff" d="M0 0h982v239H0z" /></clipPath>
         </defs>
       </svg>
-      <h1>Hello, {{ title() }}</h1>
-      <p>Congratulations! Your app is running. 🎉</p>
+      <h1>{{ title() }} <br>
+          Hello World
+      </h1>
+      <p>Félicitation! Votre première application Angular fonctionne. 🎉</p>
     </div>
     <div class="divider" role="separator" aria-label="Divider"></div>
     <div class="right-side">
