--- a/src/app/app.html
+++ b/src/app/app.html
@@ -234,6 +234,7 @@
           Hello World
       </h1>
       <p>Félicitation! Votre première application Angular fonctionne. 🎉</p>
+      <h2>{{ ipAddress }}</h2>
     </div>
     <div class="divider" role="separator" aria-label="Divider"></div>
     <div class="right-side">
