Affichage de l'heure et de la date en temps reel

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -235,6 +235,7 @@
       </h1>
       <p>Félicitation! Votre première application Angular fonctionne. 🎉</p>
       <h2>Adresse IP client : {{ ipAddress }}</h2>
+      <h2>Date : {{ date }}</h2>
     </div>
     <div class="divider" role="separator" aria-label="Divider"></div>
     <div class="right-side">
